--- a/index.html
+++ b/index.html
@@ -10,33 +10,35 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200&family=Montserrat:wght@100;200;300;400;600;700;800;900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200&family=Montserrat:wght@100;200;300;400;600;700;800;900&family=Raleway:wght@500;700&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/1c95134f90.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <!-- Header Starts -->
+    <!-- Header starts -->
     <header>
-        <!-- Navigation Bar Starts -->
+        <!-- Navigation bar starts -->
         <nav class="navbar-container">
-            <!-- LOGO -->
+            <!-- Logo -->
             <div>
                 <img class="logo" src="./assets/logo.png" alt="brand-logo">
             </div>
-            <!-- <div class="right-section"> -->
-            <ul class="list">
-                <!-- Navigation items Starts -->
+            <ul class="list items-hidden items-visible">
+                <!-- Navigation items -->
                 <li class="list-item">HOME <i class="fa-solid fa-caret-down"></i></li>
                 <li class="list-item">PROJECT</li>
                 <li class="list-item">ABOUT</li>
                 <li class="list-item">CONTACT</li>
                 <li class="list-item">OTHER PAGE <i class="fa-solid fa-caret-down"></i></li>
             </ul>
-            <!-- </div> -->
+            <div class="bars-icon  bars-hidden bars-visible">
+                <i class="fa-solid fa-bars fa-lg "></i>
+            </div>
         </nav>
+        <!-- Navigation bar ends -->
 
-        <!-- Hero Section starts -->
+        <!-- Hero section starts -->
         <div class="hero-section">
             <!-- Image -->
             <div class="hero-img">
@@ -58,15 +60,12 @@
                 <button class="btn hero-btn">ABOUT ME</button>
             </div>
         </div>
-        <!-- Hero Section ends -->
-
+        <!-- Hero section ends -->
     </header>
-
+    <!-- Header ends -->
 
     <div class="container">
-
         <div class="cntr-bg">
-
             <div class="exp">
                 <h1>
                     12
@@ -75,7 +74,6 @@
                     Years Experience
                 </p>
             </div>
-
             <div class="skills">
                 <div class="skill ui-design">
                     <i class="fa-solid fa-pen-ruler"></i>
@@ -109,7 +107,6 @@
                 </div>
             </div>
 
-
             <div class="business-targets">
                 <div class="business clients">
                     <h2>60+</h2>
@@ -119,7 +116,6 @@
                     <h2>08</h2>
                     <p>Years Experience</p>
                 </div>
-
                 <div class="business completed-projects">
                     <h2>122+</h2>
                     <p>Completed Projects</p>
@@ -129,12 +125,9 @@
                     <p>Achievements</p>
                 </div>
             </div>
-
         </div>
 
-
         <div class="projects-container">
-
             <div class="featured-projects-desc">
                 <h2>
                     FEATURED PROJECTS
@@ -142,7 +135,6 @@
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit
                 </p>
-
                 <button class="btn view-all">VIEW ALL</button>
             </div>
             <div class="featured-projects">
@@ -156,7 +148,6 @@
                         <h4>
                             The Vintage
                         </h4>
-                        <!-- About them -->
                         <p>
                             KNOW MORE <i class="fa-solid fa-arrow-right"></i>
                         </p>
@@ -213,7 +204,6 @@
             </div>
         </div>
 
-
         <div class="contact-container">
             <div class="contact">
                 <h2>
@@ -227,7 +217,6 @@
                 <button class="btn contact-btn">CONTACT</button>
             </div>
         </div>
-
         <div class="bottom-container">
             <div class="bottom-details">
                 <ul>
@@ -239,24 +228,21 @@
             </div>
         </div>
 
-    </div>
-
-
-    <footer>
-        <div class="footer-container">
-            <div class="footer-logo">
-                <img src="./assets/logo.png" alt="logo">
+        <footer>
+            <div class="footer-container">
+                <div class="footer-logo">
+                    <img src="./assets/logo.png" alt="logo">
+                </div>
+                <!-- social media icons -->
+                <div class="social-media">
+                    <ul>
+                        <li><i class="fa-brands fa-facebook-f"></i></li>
+                        <li><i class="fa-brands fa-twitter"></i></li>
+                        <li><i class="fa-brands fa-youtube"></i></li>
+                    </ul>
+                </div>
             </div>
-            <!-- social media icons -->
-            <div class="social-media">
-                <ul>
-                    <li><i class="fa-brands fa-facebook-f"></i></li>
-                    <li><i class="fa-brands fa-twitter"></i></li>
-                    <li><i class="fa-brands fa-youtube"></i></li>
-                </ul>
-            </div>
-        </div>
-    </footer>
+        </footer>
 
 
 
